# Advent-of-Code

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts
2015/: .gitignore  CMakeLists.txt
2015/01/: CMakeLists.txt  main.asm  main.c
2015/02/: CMakeLists.txt  main.asm
2015/03/: CMakeLists.txt  main.asm  part1.asm  part2.asm
2015/utils/: benchmark.h  file.h  main.c
2017/: docker-compose.yml
2017/01/: main.sql
2017/02/: main.sql
2017/utils/: procedures.sql
2020/: .gitignore  Cargo.toml
2020/01/: main.rs
2020/02/: main.rs
2020/03/: main.rs
2020/04/: main.rs
2020/05/: main.rs
2020/06/: main.rs
2020/07/: main.rs
2020/08/: main.rs
2020/utils/: mod.rs
2021/: build.gradle.kts
2021/01/: main.kt
2021/02/: main.kt
2021/03/: main.kt
2021/04/: main.kt
2021/05/: main.kt
2021/06/: main.kt
2021/07/: main.kt
2021/08/: main.kt
2022/01/: main.py
2022/02/: main.py
2022/03/: main.py
2022/04/: main.py
2022/05/: main.py
2022/06/: main.py
2022/07/: main.py
2022/08/: main.py
2022/utils/: input.py
