[package]
name = "chylex-aoc-2020"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"

[[bin]]
name = "01"
path = "01/main.rs"

[[bin]]
name = "02"
path = "02/main.rs"

[[bin]]
name = "03"
path = "03/main.rs"

[[bin]]
name = "04"
path = "04/main.rs"

[[bin]]
name = "05"
path = "05/main.rs"

[[bin]]
name = "06"
path = "06/main.rs"
